[project]
name = "project-1"
version = "0.1.0"
description = ""
authors = [
    {name = "falcolnic",email = "mykh.yano@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
